TestRepo2/src/objects/Action__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishment_Recap__c</fullName>
        <label>Accomplishment Recap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Goal_Name__c</fullName>
        <formula>Account__r.Territory__r.Name &amp; &quot; - &quot; &amp; Goal__r.Name &amp; &quot; - &quot; &amp;  Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory, Goal &amp; Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Reporting_Type__c</fullName>
        <description>This Workflow Rule will automatically populate the picklist value for the Objective Reporting Type field, based on the Record Type. This is for reporting purposes (Individual Activity Management)</description>
        <label>Action Reporting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ease of Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Training</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>IF 
(Text(Goal__r.Goal_Type__c) = &quot;On-Premise - Control&quot;, 
&quot;On - &quot; &amp; RecordType.DeveloperName , 
&quot;Off - &quot; &amp; RecordType.DeveloperName )</formula>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandBottle_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BrandBottle Size</label>
        <referenceTo>BrandBottle_Size__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Bottle_Size__c</fullName>
        <label>Brand Bottle Size</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Category</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brand Category</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Called_On_Accounts__c</fullName>
        <label>Called On Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Displayed__c</fullName>
        <label>Cases Displayed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Complete_Date__c</fullName>
        <description>This field is used for reporting the date that the user marked their action &quot;Closed - Complete.&quot;</description>
        <label>Closed - Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Finished__c</fullName>
        <label>Date Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dave_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dave Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>IF(Goal__c = null, Objective__r.Due_Date__c, Goal__r.Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_offline__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <label>Feature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cocktail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shot List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine list</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_For_Director__c</fullName>
        <formula>IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Parent_Goal__r.Parent_Goal__r.Goal_For__r.LastName,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Parent_Goal__r.Goal_For__r.LastName,
IF(Goal__c != null, Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Goal_For__r.LastName, &apos;N/A&apos;)
)
)</formula>
        <label>Goal For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Manager__c</fullName>
        <formula>IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Parent_Goal__r.Goal_For__r.LastName,
IF(Goal__c != null, Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Goal_For__r.LastName, &apos;N/A&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Rep__c</fullName>
        <formula>IF(Goal__c != null, Goal__r.Goal_For__r.FirstName + &apos; &apos; + Goal__r.Goal_For__r.LastName, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Level_Manager__c</fullName>
        <formula>IF(Goal__r.Parent_Goal__c != null, TEXT(Goal__r.Parent_Goal__r.Goal_Level__c),
IF(Goal__c != null, TEXT(Goal__r.Goal_Level__c), &apos;N/A&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Level_Rep__c</fullName>
        <formula>IF(Goal__c != null, TEXT(Goal__r.Goal_Level__c), &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Priority__c</fullName>
        <formula>TEXT(Goal__r.Priority__c)</formula>
        <label>Goal Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gold_Standard_Met__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gold Standard Met</label>
        <referenceTo>Gold_Standard_Met__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Goal_Level_Director__c</fullName>
        <formula>IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, TEXT(Goal__r.Parent_Goal__r.Parent_Goal__r.Goal_Level__c),
    IF(Goal__r.Parent_Goal__c != null, TEXT(Goal__r.Parent_Goal__r.Goal_Level__c),
        IF(Goal__c != null, TEXT(Goal__r.Goal_Level__c), &apos;N/A&apos;)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Training__c</fullName>
        <inlineHelpText>Length of time in minutes that the training took place</inlineHelpText>
        <label>Length of Training</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Completed_Actions_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
     IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Action_Complete__c, 
          IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
               IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
          )
     ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Completed_Actions_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Completed_Actions_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Goal_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
     IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Minimum_of_Accounts__c, 
          IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
               IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
          )
     ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Goal_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
          IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
               IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
          ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Goal_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
               IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Grade__c</fullName>
        <inlineHelpText>A = Front end cap, main lobby, checkout
B = Back of store, isle display, mid end cap
C = Others</inlineHelpText>
        <label>Location Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Completed_Actions__c</fullName>
        <formula>Goal__r.Parent_Goal__r.Action_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Goal__c</fullName>
        <formula>Goal__r.Parent_Goal__r.Minimum_of_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <formula>Objective__r.Link_to_Content__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Update_Records_for_Data_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update Records for Data Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA7RTID__c</fullName>
        <label>NA7RTID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Completed_Actions_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
     IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Action_Complete__c, 
          IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
               IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
          )
     ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Completed_Actions_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Completed_Actions_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
     IF(Goal__c != null &amp;&amp; Goal__r.Action_Count__c &gt; 0, Goal__r.Action_Complete__c / Goal__r.Action_Count__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Completed Actions</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Goal_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
     IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Minimum_of_Accounts__c, 
          IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
               IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
          )
     ),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Goal_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Goal_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
     IF(Goal__c != null &amp;&amp; Goal__r.Action_Count__c &gt; 0, Goal__r.Minimum_of_Accounts__c / Goal__r.Action_Count__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Goal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_Items_SFA__c</fullName>
        <label>POS Items - SFA</label>
        <picklist>
            <picklistValues>
                <fullName>A-Frame Cocktail Stand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Stacker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Tucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Drink List (Books)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condiment Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corebuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy Bottles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutter Mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapel Pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Case Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent_Goal_Completed_Actions__c</fullName>
        <formula>IF(TEXT(Goal__r.State__c) = &apos;CT&apos;, Goal__r.Minimum_of_Accounts__c, IF(OwnerId = Goal__r.OwnerId, Goal__r.Minimum_of_Accounts__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premise_Activity_Type_Priority__c</fullName>
        <formula>IF 
(Text(Goal__r.Goal_Type__c) = &quot;On-Premise - Control&quot;, 
&quot;On - &quot; &amp; Goal__r.RecordType.Name &amp; &quot; - &quot; &amp; TEXT(Goal__r.Priority__c), 
&quot;Off - &quot; &amp; Goal__r.RecordType.Name &amp; &quot; - &quot; &amp; TEXT(Goal__r.Priority__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise/Activity Type/Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Activity_Type__c</fullName>
        <formula>IF
(Text(Goal__r.Goal_Type__c) = &quot;On-Premise - Control&quot;, 
&quot;On - &quot; &amp; RecordType.Name,
&quot;Off - &quot; &amp; RecordType.Name )</formula>
        <label>Premise/Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Link_Count__c</fullName>
        <label>Product Link Count</label>
        <summaryForeignKey>Action_Product_Link__c.Action__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Sample_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Sample(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeID_NA15__c</fullName>
        <formula>IF(RecordTypeId = &apos;012A00000012XApIAM&apos;, &apos;012i0000000du83AAA&apos;, 
	IF(RecordTypeId = &apos;012A00000012Y4mIAE&apos;, &apos;012i0000000du84AAA&apos;,
	IF(RecordTypeId = &apos;012A00000017TKFIA2&apos;, &apos;012i0000000du85AAA&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4nIAE&apos;, &apos;012i0000000du86AAA&apos;,
	IF(RecordTypeId = &apos;012A00000017TKAIA2&apos;, &apos;012i0000000du87AAA&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4oIAE&apos;, &apos;012i0000000du88AAA&apos;,
	IF(RecordTypeId = &apos;012A00000012XAqIAM&apos;, &apos;012i0000000du8AAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012WgKIAU&apos;, &apos;012i0000000du89AAA&apos;,
	IF(RecordTypeId = &apos;012A00000012XArIAM&apos;, &apos;012i0000000du8BAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012WgLIAU&apos;, &apos;012i0000000du8CAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y6OIAU&apos;, &apos;012i0000000du8DAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y6TIAU&apos;, &apos;012i0000000du8EAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012WgMIAU&apos;, &apos;012i0000000du8FAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4pIAE&apos;, &apos;012i0000000du8GAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4qIAE&apos;, &apos;012i0000000du8HAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XAsIAM&apos;, &apos;012i0000000du8IAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4rIAE&apos;, &apos;012i0000000du8JAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XAtIAM&apos;, &apos;012i0000000du8LAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012WgNIAU&apos;, &apos;012i0000000du8KAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XAuIAM&apos;, &apos;012i0000000du8MAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4sIAE&apos;, &apos;012i0000000du8NAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XAvIAM&apos;, &apos;012i0000000du8OAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4tIAE&apos;, &apos;012i0000000du8PAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012WlWIAU&apos;, &apos;012i0000000du8UAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XXDIA2&apos;, &apos;012i0000000du8QAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000017TKKIA2&apos;, &apos;012i0000000du8RAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4vIAE&apos;, &apos;012i0000000du8TAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4uIAE&apos;, &apos;012i0000000du8SAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4wIAE&apos;, &apos;012i0000000du8VAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4xIAE&apos;, &apos;012i0000000du8WAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012XAwIAM&apos;, &apos;012i0000000du8XAAQ&apos;,
	IF(RecordTypeId = &apos;012A00000012Y4yIAE&apos;, &apos;012i0000000du8YAAQ&apos;,
	&apos;NA&apos;))))))))))))))))))))))))))))))))</formula>
        <label>RecordTypeID_NA15</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Action_Count__c</fullName>
        <formula>Goal__r.Action_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Completed_Actions__c</fullName>
        <formula>Goal__r.Action_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Goal__c</fullName>
        <formula>Goal__r.Minimum_of_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelf_Set_Criteria__c</fullName>
        <label>Shelf Set Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Ad__c</fullName>
        <label>Size of Ad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <formula>IF( 

Account__c != NULL, TEXT(Account__r.Territory__r.State__c), &quot;N/A&quot;


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Already In Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_Display_Price__c</fullName>
        <inlineHelpText>“The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.”</inlineHelpText>
        <label>Suggested Display Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Price__c</fullName>
        <inlineHelpText>The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.</inlineHelpText>
        <label>Suggested Retail Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tasted_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasted Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Actions_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
)
),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Actions_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Action_Complete__c,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Actions_Rep__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__c != null, Goal__r.Action_Complete__c, 0),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Goal_Director__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
)
),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Goal_Manager__c</fullName>
        <formula>IF(TEXT(Goal__r.Priority__c) = &apos;Local&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
),
0)
+
IF(TEXT(Goal__r.Priority__c) = &apos;National&apos;,
IF(Goal__r.Parent_Goal__c != null, Goal__r.Parent_Goal__r.Minimum_of_Accounts__c,
IF(Goal__c != null, Goal__r.Minimum_of_Accounts__c, 0)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>